tests/k8s/kind/delete-ingress.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shardline
$patch: delete
